fix -webkit-backface-visibility: hidden;

--- a/css/igotmine.css
+++ b/css/igotmine.css
@@ -513,6 +513,7 @@ p.ok-section-details {
 .front,
 .back {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     -webkit-transition: -webkit-transform 0.8s;
     transition: transform 0.8s;
     position: absolute;
@@ -522,7 +523,7 @@ p.ok-section-details {
 /* front pane, placed above back */
 
 .front {
-    /*z-index: 2;*/
+    z-index: 2;
     /* for firefox 31 */
     transform: rotateY(0deg);
 }
